<resources>
    <string name="app_name">گوش موسیقیایی</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigetion_icon">navigetion_icon</string>
    <string name="title_activity_setting">تنظیمات</string>
    <string name="title_activity_about">درباره نرم افزار</string>
    <string name="title_activity_contactus">تماس با ما</string>
    <string name="title_activity_similarapp">برنامه های مشابه</string>
    <string name="title_activity_mainpage">صفحه نخست</string>
    <string name="contactus">برای تماس با مدیر برنامه از دو طریق زیر اقدام کنید.</string>
    <string name="email_address">tavousi.ali@gmail.com</string>
    <string name="email">ایمیل:</string>
    <string name="telegram">تلگرام:</string>
    <string name="telegram_address">https://telegram.me/tavousiali</string>
    <string name="dialog_title">خطا</string>
    <string name="dialog_message">برای نمایش محصولات مشابه، اتصال اینترنتی خود را برقرار نمایید.</string>
</resources>
